<resources>
    <string name="app_name">MIPT_Lab3</string>
    <string name="clear">CE</string>
    <string name="delete">←</string>
    <string name="squareRoot">√</string>
    <string name="division">/</string>
    <string name="number7">7</string>
    <string name="number8">8</string>
    <string name="number9">9</string>
    <string name="multiplication">*</string>
    <string name="number4">4</string>
    <string name="number5">5</string>
    <string name="number6">6</string>
    <string name="plus">+</string>
    <string name="number1">1</string>
    <string name="number2">2</string>
    <string name="number3">3</string>
    <string name="minus">-</string>
    <string name="plusMinus">±</string>
    <string name="number0">0</string>
    <string name="comma">.</string>
    <string name="equal">=</string>
    <string name="mplus">M+</string>
    <string name="mminus">M-</string>
    <string name="mr">MR</string>
    <string name="MemoryClear">MC</string>
    <string name="procent">%</string>
    <string name="ms">MS</string>
    <string name="onedevidedbyx">1/x</string>


</resources>