<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="8">

    <TextView
        android:id="@+id/tvScreen"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:textColor="@color/black"
        android:text="0"
        android:layout_weight="2"
        android:textAlignment="textEnd"
        android:textSize="60sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="5">
        <Button
            android:id="@+id/MC"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/MemoryClear"
            android:textSize="19sp" />
        <Button
            android:id="@+id/MR"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/mr"
            android:textSize="19sp" />
        <Button
            android:id="@+id/MS"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/ms"
            android:textSize="19sp" />
        <Button
            android:id="@+id/mPlus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/mplus"
            android:textSize="19sp" />
        <Button
            android:id="@+id/mMinus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/mminus"
            android:textSize="19sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="5">
        <Button
            android:id="@+id/delete"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/delete"
            android:textSize="50sp"
            android:onClick="onButtonClick"/>

        <Button
            android:id="@+id/clearEverything"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/clear"
            android:textSize="20sp"
            android:onClick="onButtonClick"/>

        <Button
            android:id="@+id/plusMinus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/plusMinus"
            android:textSize="25sp"
            android:onClick="onButtonClick"/>
        <Button
            android:id="@+id/squareRoot"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/squareRoot"
            android:layout_weight="1"
            android:textSize="25sp"
            android:onClick="onButtonClick"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="5">
        <Button
            android:id="@+id/number7"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/number7"
            android:textSize="25sp"
            android:onClick="onButtonClick"/>
        <Button
            android:id="@+id/number8"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/number8"
            android:textSize="25sp"
            android:onClick="onButtonClick"/>
        <Button
            android:id="@+id/number9"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/number9"
            android:textSize="25sp"
            android:onClick="onButtonClick"/>
        <Button
            android:id="@+id/division"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/division"
            android:textSize="25sp"
            android:onClick="onButtonClick"/>
        <Button
            android:id="@+id/procent"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/procent"
            android:textSize="25sp"
            android:onClick="onButtonClick"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="5">
        <Button
            android:id="@+id/number4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/number4"
            android:textSize="25sp"
            android:onClick="onButtonClick"/>
        <Button
            android:id="@+id/number5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/number5"
            android:textSize="25sp"
            android:onClick="onButtonClick"/>
        <Button
            android:id="@+id/number6"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/number6"
            android:textSize="25sp"
            android:onClick="onButtonClick"/>
        <Button
            android:id="@+id/multiplication"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/multiplication"
            android:textSize="25sp"
            android:onClick="onButtonClick"/>
        <Button
            android:id="@+id/oneDevidedByX"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/onedevidedbyx"
            android:textSize="20sp"
            android:onClick="onButtonClick"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">
                    <Button
                        android:id="@+id/number1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/number1"
                        android:textSize="25sp"
                        android:onClick="onButtonClick"/>
                    <Button
                        android:id="@+id/number2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/number2"
                        android:textSize="25sp"
                        android:onClick="onButtonClick"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:weightSum="0">

                    <Button
                        android:id="@+id/number0"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/number0"
                        android:textSize="25sp"
                        android:onClick="onButtonClick"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <Button
                        android:id="@+id/number3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/number3"
                        android:textSize="25sp"
                        android:onClick="onButtonClick"/>
                    <Button
                        android:id="@+id/comma"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/comma"
                        android:textSize="25sp"
                        android:onClick="onButtonClick"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <Button
                        android:id="@+id/nxx"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="+"
                        android:textSize="25sp"
                        android:onClick="onButtonClick"/>
                    <Button
                        android:id="@+id/minus"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/minus"
                        android:textSize="25sp"
                        android:onClick="onButtonClick"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <Button
                        android:id="@+id/equal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/equal"
                        android:textSize="25sp"
                        android:onClick="onButtonClick"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>